--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-stripe-js": "^1.0.1"
   },
   "dependencies": {
+    "@splidejs/vue-splide": "^0.6.12",
     "@stripe/stripe-js": "^1.52.1",
     "@vueform/slider": "^2.1.7",
     "nuxt-graphql-client": "^0.2.27",
